# biostruct-vision-manipulation

./: .gitignore
abb_ws/src/profactor_ros2/: README.md
abb_ws/src/profactor_ros2/abb_irb6700_205_280/abb_irb6700_205_280/: CMakeLists.txt  package.xml
abb_ws/src/profactor_ros2/abb_irb6700_205_280/abb_irb6700_205_280_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
abb_ws/src/profactor_ros2/abb_irb6700_205_280/abb_irb6700_205_280_moveit_config/config/: abb_irb6700_205_280.srdf  abb_irb6700_205_280.urdf.xacro  chomp_planning.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  pilz_industrial_motion_planner_planning.yaml  ros2_controllers.yaml
abb_ws/src/profactor_ros2/abb_irb6700_205_280/abb_irb6700_205_280_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
abb_ws/src/profactor_ros2/abb_irb6700_205_280/abb_irb6700_205_280_support/: CMakeLists.txt  README.md  package.xml
abb_ws/src/profactor_ros2/abb_irb6700_205_280/abb_irb6700_205_280_support/launch/: view_robot.launch.py
abb_ws/src/profactor_ros2/abb_irb6700_205_280/abb_irb6700_205_280_support/meshes/ProPoint_gripper_20260128/: Collision_251271_Gripper_Amura_20260128_STL.stl
abb_ws/src/profactor_ros2/abb_irb6700_205_280/abb_irb6700_205_280_support/meshes/irb6700_205_280/: ManipulatorJoint0.stl  ManipulatorJoint1.stl  ManipulatorJoint2.stl  ManipulatorJoint3.stl  ManipulatorJoint4.stl  ManipulatorJoint5.stl  ManipulatorJoint6.stl
abb_ws/src/profactor_ros2/abb_irb6700_205_280/abb_irb6700_205_280_support/urdf/: abb_irb6700_205_280.ros2_control.xacro  abb_irb6700_205_280.xacro  abb_irb6700_205_280_macro.xacro  abb_irb6700_205_280_temp_drapebot.xacro
abb_ws/src/profactor_ros2/abb_workcell/abb_workcell_bringup/: CMakeLists.txt  README.md  package.xml
abb_ws/src/profactor_ros2/abb_workcell/abb_workcell_bringup/config/: abb_interface_robotstudio_local.yaml
abb_ws/src/profactor_ros2/abb_workcell/abb_workcell_bringup/launch/: abb_control.launch.py  abb_moveit.launch.py  abb_rws_client.launch.py
abb_ws/src/profactor_ros2/biostruct_amura/: CMakeLists.txt  README.md  package.xml
abb_ws/src/profactor_ros2/biostruct_amura/config/: moveit_cpp.rviz  moveit_cpp.yaml  mqtt_client_params.yaml
abb_ws/src/profactor_ros2/biostruct_amura/include/biostruct_amura/: helpers.h
abb_ws/src/profactor_ros2/biostruct_amura/launch/: execution_node.launch.py  move_group.launch.py  planning_node.launch.py
abb_ws/src/profactor_ros2/biostruct_amura/memory/: memory.yaml
abb_ws/src/profactor_ros2/biostruct_amura/meshes/: CollisionMould.stl  CollisionTable.stl  Human.stl  Table.stl
abb_ws/src/profactor_ros2/biostruct_amura/src/: execution_node.cpp  planning_node.cpp
abb_ws/src/profactor_ros2/biostruct_robotics_lab/: CMakeLists.txt  README.md  package.xml
abb_ws/src/profactor_ros2/biostruct_robotics_lab/config/: moveit.rviz
abb_ws/src/profactor_ros2/biostruct_robotics_lab/include/biostruct_robotics_lab/: helpers.h
abb_ws/src/profactor_ros2/biostruct_robotics_lab/launch/: execution_node.launch.py  move_group.launch.py  planning_node.launch.py
abb_ws/src/profactor_ros2/biostruct_robotics_lab/memory/: memory.yaml
abb_ws/src/profactor_ros2/biostruct_robotics_lab/src/: execution_node.cpp  planning_node.cpp
coordinator_ws/coordinator_app/: README.md  requirements.txt
coordinator_ws/coordinator_app/launch/: launch_stack.py  old_software_launch.py
coordinator_ws/coordinator_app/src/: coordinator.py
vision_ws/vision_app/: README.md  requirements.txt
vision_ws/vision_app/calib/extrinsics/: T_cam2tcp_10_00_29__03022026.yaml
vision_ws/vision_app/calib/intrinsics/: genie_nano_m2590_mono_calib_2742.yaml
vision_ws/vision_app/src/: vision_node.py
