<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>biostruct_robotics_lab</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="luca.grigolin@profactor.at">dzieli</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_visual_tools</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosbag2_cpp</depend>
  <depend>nlohmann_json</depend>
  <depend>control_msgs</depend>
  <depend>moveit_ros_planning</depend>
  <depend>geometric_shapes</depend>
  <depend>ament_index_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
